--- a/child/templates/index.html
+++ b/child/templates/index.html
@@ -11,30 +11,32 @@
     <title>childlinks</title>
   </head>
   <body>
-    <div class="jumbotron">
+    <!-- <div class="jumbotron"> -->
       <!-- <h1>Welcome to child links</h1> -->
       {% block content %}
       <div class="jumbotron">
-        <h1 class="text-center"> Welcome to childlinks site</h1>
+        <h1 class="text-center"><img src="static/image/logo.jpg" alt="" height="50px">  <br> Welcome to childlinks site</h1>
       </div>
 
       <div class="container">
         <div class="row">
           <div class="col-md-6">
             <img src="static/image/girl.jpeg" alt="needy" height="400px" width="450px">
-            <p>Hey, we are here to help you out in your troubles</p>
-            <p>This is a platform who aim is to bring organizations and volunteers under one roof for easy access to the needy</p>
-            <p>You need to be a member in order to partcipate our activities</p>
+
 
           </div>
 
-          <div class="col-md-6" style="color:white;">
-            <h1>SPONSOR A CHILD TODAY</h1>
+          <div class="col-md-6" style="background-color:white;">
+            <h1 style="text-decoration: underline; color:blue;">SPONSOR A CHILD TODAY</h1>
             <h2>Together</h2>
             <h3>We can make life better</h3>
             <p> Love, care and help make a difference in this world</p>
             <p>Even a small contribution becomes a part of a huge change</p>
-            <p>Have an account? <a href="{% url 'auth_login' %}" class="btn btn-primary">Create Profile</a></p>
+            <p>Hey, we are here to help you out in your troubles</p>
+            <p>This is a platform who aim is to bring organizations and volunteers under one roof for easy access to the needy</p>
+            <!-- <p>You need to be a member in order to partcipate our activities</p> -->
+
+            <!-- <p>Have an account? <a href="{% url 'auth_login' %}" class="btn btn-primary">Create Profile</a></p> -->
           </div>
         </div>
       </div>
@@ -45,7 +47,7 @@
 
 
 
-    </div>
+    <!-- </div> -->
 
 <div class="container">
   <p>this is a brief description about us</p>
