--- a/child/templates/index.html
+++ b/child/templates/index.html
@@ -36,7 +36,7 @@
             <p>This is a platform who aim is to bring organizations and volunteers under one roof for easy access to the needy</p>
             <!-- <p>You need to be a member in order to partcipate our activities</p> -->
 
-            <!-- <p>Have an account? <a href="{% url 'auth_login' %}" class="btn btn-primary">Create Profile</a></p> -->
+            <p>Have an account? <a href="{% url 'auth_login' %}" class="btn btn-primary">Create Profile</a></p>
           </div>
         </div>
       </div>
