--- a/child/templates/index.html
+++ b/child/templates/index.html
@@ -31,7 +31,7 @@
             <h2>Together</h2>
             <h3>We can make life better</h3>
             <p> Love, care and help make a difference in this world</p>
-            <p>Even a small contribution becomes a part of a huge change</p>
+            <p>Even a small contribution becomes a part of a huge change</p><br><br>
             <p>Hey, we are here to help you out in your troubles</p>
             <p>This is a platform who aim is to bring organizations and volunteers under one roof for easy access to the needy</p>
             <!-- <p>You need to be a member in order to partcipate our activities</p> -->
