--- a/child/templates/navbar.html
+++ b/child/templates/navbar.html
@@ -18,7 +18,7 @@
         <div class="navbar-header">
           <a class="navbar-brand" href="{% url 'welcome' %}">Home</a>
 
-          <a class="navbar-brand" href="/about.html">About</a>
+          <a class="navbar-brand" href="{% url 'organizationDetails' %}">About</a>
 
           <a class="navbar-brand" href="{% url 'welcome' %}">Contacts</a>
         </div>
