--- a/child/templates/registration/login.html
+++ b/child/templates/registration/login.html
@@ -23,8 +23,9 @@
             <div class="form-group">
               <input type="submit" class="btn btn-primary btn-sm" value="Login">
             </div>
-
-            <input type="hidden" name="next" value="{{next}}">
+            <p>You don't have account, sign up? <a href="/accounts/register/" class="btn btn-primary">Sign Up</a></p>
+            <input type="hidden" name="next" value="{% url 'organizationDetails' %}">
+            <!-- <input type="hidden" name="next" value="{{next}}"> -->
 
           </form>
 
