--- a/child/templates/search.html
+++ b/child/templates/search.html
@@ -12,11 +12,11 @@
     <div class="container">
 
       <div class="row">
-        {% if categories %}
+        <!-- {% if categories %}
           <h2>Found {{ categories|length }} of searched term {{message}}</h2>
         {% else %}
           <h2> Found 0 categories for the search term {{message}}</h2>
-        {% endif %}
+        {% endif %} -->
       </div>
 
       <div class="row">
