--- a/child/templates/organizer/index.html
+++ b/child/templates/organizer/index.html
@@ -6,7 +6,7 @@
 
               <p class="card-text">Description:{{organization.description}}</p>
               <p class="card-text">Location: {{organization.site}}</p>
-              <p class="card-text">Contact: {{organization.phone}}</p>
+              <p class="card-text">Contact: {{organization.contact}}</p>
 
             </div>
         {% endfor %}
